chore(checkstyle): enforce Google Java Style and reformat codebase to 2-space indent
Wires the checkstyle plugin to actually use config/checkstyle/google_checks.xml
(it was silently falling back to the bundled default ruleset) with severity=error
and violationSeverity=error so violations fail the build. Bumps checkstyle to
13.8.0 to match the config's syntax and imports the corresponding Google Java
Style scheme into IntelliJ, then applies Reformat Code + Optimize Imports across
the tree, dropping checkstyle violations from 110,166 to 12,362. Remaining
violations (PackageName, missing Javadoc, naming checks) need manual fixes and
are tracked as follow-up.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>