@@ -1,86 +1,98 @@
 package org.purpleBean.kmip.model.core.structure;
 
-import lombok.Builder;
-import lombok.Data;
-import lombok.NonNull;
-import lombok.Singular;
-import org.purpleBean.kmip.api.*;
-
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NonNull;
+import lombok.Singular;
+import org.purpleBean.kmip.api.EncodingType;
+import org.purpleBean.kmip.api.KmipContext;
+import org.purpleBean.kmip.api.KmipDataType;
+import org.purpleBean.kmip.api.KmipSpec;
+import org.purpleBean.kmip.api.KmipStructure;
+import org.purpleBean.kmip.api.KmipTag;
 
 @Data
 @Builder(toBuilder = true)
 public class Authentication implements KmipStructure {
-    public static final KmipTag kmipTag = KmipTag.Standard.AUTHENTICATION.inst();
-    private static final Set<KmipSpec> supportedVersions = Set.of(KmipSpec.UnknownVersion, KmipSpec.V1_2, KmipSpec.V1_3, KmipSpec.V1_4, KmipSpec.V2_0, KmipSpec.V2_1, KmipSpec.V3_0);
+  public static final KmipTag kmipTag = KmipTag.Standard.AUTHENTICATION.inst();
+  private static final Set<KmipSpec> supportedVersions =
+      Set.of(KmipSpec.UnknownVersion, KmipSpec.V1_2, KmipSpec.V1_3, KmipSpec.V1_4, KmipSpec.V2_0,
+          KmipSpec.V2_1, KmipSpec.V3_0);
 
-    static {
-        for (KmipSpec spec : supportedVersions) {
-            if (spec == KmipSpec.UnknownVersion || spec == KmipSpec.UnsupportedVersion) continue;
-            KmipDataType.register(spec, kmipTag.getValue(), encodingType, Authentication.class);
-        }
+  static {
+    for (KmipSpec spec : supportedVersions) {
+      if (spec == KmipSpec.UnknownVersion || spec == KmipSpec.UnsupportedVersion) {
+        continue;
+      }
+      KmipDataType.register(spec, kmipTag.getValue(), encodingType, Authentication.class);
     }
+  }
 
-    @NonNull
-    @Singular
-    private final List<Credential> credentials;
+  @NonNull
+  @Singular
+  private final List<Credential> credentials;
 
-    @Builder
-    private Authentication(
-            List<Credential> credentials
-    ) {
-        this.credentials = (credentials == null) ? Collections.emptyList() : credentials;
-        validate();
+  @Builder
+  private Authentication(
+      List<Credential> credentials
+  ) {
+    this.credentials = (credentials == null) ? Collections.emptyList() : credentials;
+    validate();
+  }
+
+  public static Authentication of(
+      Credential... credentials
+  ) {
+    return of(List.of(credentials));
+  }
+
+  public static Authentication of(
+      List<Credential> credentials
+  ) {
+    return Authentication
+        .builder()
+        .credentials(credentials)
+        .build();
+  }
+
+  private void validate() {
+    if (!isSupported()) {
+      throw new IllegalArgumentException(
+          String.format("Unsupported object type for %s: %s", KmipContext.getSpec(), getKmipTag()));
     }
+    // Add validation logic here
+  }
 
-    public static Authentication of(
-            Credential... credentials
-    ) {
-        return of(List.of(credentials));
-    }
+  @Override
+  public KmipTag getKmipTag() {
+    return kmipTag;
+  }
 
-    public static Authentication of(
-            List<Credential> credentials
-    ) {
-        return Authentication.builder()
-                .credentials(credentials)
-                .build();
-    }
+  @Override
+  public EncodingType getEncodingType() {
+    return encodingType;
+  }
 
-    private void validate() {
-        if (!isSupported()) {
-            throw new IllegalArgumentException(String.format("Unsupported object type for %s: %s", KmipContext.getSpec(), getKmipTag()));
-        }
-        // Add validation logic here
-    }
+  @Override
+  public boolean isSupported() {
+    KmipSpec spec = KmipContext.getSpec();
+    return supportedVersions.contains(spec) && Stream
+        .of(getValue())
+        .allMatch(KmipDataType::isSupported);
+  }
 
-    @Override
-    public KmipTag getKmipTag() {
-        return kmipTag;
-    }
-
-    @Override
-    public EncodingType getEncodingType() {
-        return encodingType;
-    }
-
-    @Override
-    public boolean isSupported() {
-        KmipSpec spec = KmipContext.getSpec();
-        return supportedVersions.contains(spec) && Stream.of(getValue()).allMatch(KmipDataType::isSupported);
-    }
-
-    @Override
-    public KmipDataType[] getValue() {
-        return credentials.stream()
-                .filter(Objects::nonNull)
-                .flatMap(val -> val instanceof List ? ((List<?>) val).stream() : Stream.of(val))
-                .map(KmipDataType.class::cast)
-                .toArray(KmipDataType[]::new);
-    }
+  @Override
+  public KmipDataType[] getValue() {
+    return credentials
+        .stream()
+        .filter(Objects::nonNull)
+        .flatMap(val -> val instanceof List ? ((List<?>) val).stream() : Stream.of(val))
+        .map(KmipDataType.class::cast)
+        .toArray(KmipDataType[]::new);
+  }
 }
